# bazel-vue-problem

./: .gitignore  README.md  WORKSPACE
frontend/: BUILD.bazel
frontend/src/: BUILD.bazel
